Fixate heights with a few exceptions, remove scrollbars when possible, make menu condensed

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -42,6 +42,8 @@ body {
   background-image: url('/images/background_map.png');
   width: 100%;
   min-height: 100vh;
+  position: relative;
+  overflow-x: hidden;
   &.about {
       background-image: url('/images/background_about.png');
   }
@@ -53,28 +55,33 @@ body {
       background-image: url('/images/background_story2.png');
   }
 
+  @media only screen and (min-width: 950px) {
+    padding: 20px;
+  }
+  @media only screen and (min-width: 450px) and (max-width: 950px) {
+    padding: 20px;
+  }
+  @media only screen and (max-width: 450px) {
+    overflow: hidden;
+    padding: 0;
+  }  
 }
 
 
 /* CONTENT FOR ALL PAGES */
 .container {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    max-height: 96%;
+    margin: auto auto;
     background-color: white;
     padding: 0;
+    position: relative;
     
     overflow: scroll;
     border: 1px solid black;
-    position: fixed;
-    left: 0;
-    right: 0;
     
     @media only screen and (min-width: 950px) {
       width: 540px;
       height: 960px;
+      max-height: 95vh;
     }
     @media only screen and (min-width: 450px) and (max-width: 950px) {
       width: 360px;
@@ -82,8 +89,8 @@ body {
     }
     @media only screen and (max-width: 450px) {
       width: 100%;
-      height: 100%;
       max-height: 100%;
+      position: absolute;
     }
     
     article {
@@ -357,9 +364,9 @@ h3 a:active {
 footer {
     display: table;
     height: 60px;
-    position: fixed;
+    position: sticky;
     z-index: 100;
-    bottom: 30px;
+    bottom: 20px;
     left: 50%;
 
     @media only screen and (min-width: 950px) {
@@ -396,6 +403,16 @@ footer {
               color: #fff;
               text-transform: uppercase;
             }
+        }
+        @media only screen and (max-width: 950px) {
+          li {
+            padding: 0;
+            a {
+              min-width: 0;
+              padding: 0;
+              line-height: 60px;
+            }
+          }
         }
         li.menu-about {
           background-image: url("/images/aboutWhite.svg");
